--- a/app/src/main/res/layout/study_prep_name_shower_new_ui.xml
+++ b/app/src/main/res/layout/study_prep_name_shower_new_ui.xml
@@ -13,7 +13,6 @@
         android:textSize="@dimen/_14ssp"
         android:textAlignment="viewStart"
         style="@style/font_medium"
-        android:text="Name"
         android:singleLine="false"
         android:textColor="@color/black"
         android:id="@+id/tv_name"
@@ -22,41 +21,41 @@
         android:layout_marginEnd="@dimen/_10sdp"
         />
     <TextView
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/semester"
-        android:textSize="@dimen/_13ssp"
-        android:textAlignment="viewStart"
-        android:textColor="@color/black"
-        android:id="@+id/tv_semester"
-        style="@style/font_regular"
-        android:padding="@dimen/_5sdp"
-        android:singleLine="false"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/pyq"
-        android:textSize="@dimen/_13ssp"
-        android:textAlignment="viewStart"
-        style="@style/font_regular"
-        android:textColor="@color/black"
-        android:id="@+id/tv_contains_pyq"
-        android:padding="@dimen/_5sdp"
-        android:singleLine="false"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"/>
-    <TextView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/message"
+        android:textSize="@dimen/_13ssp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/black"
+        android:id="@+id/tv_message1"
+        style="@style/font_regular"
+        android:padding="@dimen/_5sdp"
+        android:singleLine="false"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"/>
+    <TextView
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_13ssp"
+        android:textAlignment="viewStart"
+        style="@style/font_regular"
+        android:textColor="@color/black"
+        android:id="@+id/tv_message2"
+        android:padding="@dimen/_5sdp"
+        android:singleLine="false"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"/>
+    <TextView
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textSize="@dimen/_10ssp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         style="@style/font_regular"
-        android:id="@+id/tv_user_message"
+        android:id="@+id/tv_message3"
         android:padding="@dimen/_5sdp"
         android:singleLine="false"
         android:layout_marginStart="@dimen/_10sdp"
